# manor

./: .gitignore  CMakeLists.txt  README.md  database.h  leasewizard.cpp  leasewizard.h  main.cpp  manor.cpp  manor.h  manor.ui  propertydialog.cpp  propertydialog.h  propertydialog.ui  shared.h  tenantdialog.cpp  tenantdialog.h  tenantdialog.ui
